# CppGeometry

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp  example.hpp
include/: Circle.hpp  Constants.hpp  Ellipse.hpp  Geometry.hpp  Line.hpp  Point.hpp  Polygon.hpp  Rectangle.hpp  Shape.hpp  Square.hpp  Triangle.hpp  Vector.hpp  tests.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  Circle.cpp  Ellipse.cpp  Line.cpp  Point.cpp  Polygon.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp  Vector.cpp  main.cpp
